toy.ebnf
(* Toy language grammar consisting only of assignment *)
Program = {Assignment};
Assignment = Identifier, '=', Expression, ';';
Expression = Unary, { ( "/" | "+" | "-" | "*" ) , Expression};
Unary = Identifier | Number;
Identifier = Character, { Character | Digit };
Number = [ "-" ], Digit, { Digit } ;
Character = "A" | "B" | "C" | "D" | "E" | "F" | "G"
            | "H" | "I" | "J" | "K" | "L" | "M" | "N"
            | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
            | "V" | "W" | "X" | "Y" | "Z" | "a" | "b"
            | "c" | "d" | "e" | "f" | "g" | "h" | "i"
            | "j" | "k" | "l" | "m" | "n" | "o" | "p"
            | "q" | "r" | "s" | "t" | "u" | "v" | "w"
            | "x" | "y" | "z" ;
Digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
